# Jay-Nehra.github.io

./: .gitignore  404.html  README.md  TEMPLATES.md  blog.html  index.html  mkdocs.yml  package-lock.json  package.json  projects.html  pyproject.toml  requirements.txt  sitemap.xml  tags.json  tailwind.config.ts
.github/workflows/: deploy.yml
about/: index.html
blog/: index.html
blog/2026-01-why-i-built-this/: index.html
client/src/: App.tsx  index.css
client/src/contexts/: ThemeContext.tsx
client/src/data/: projects.ts  skills.ts
concepts/: index.html
concepts/agent-architecture/: index.html
concepts/llm-systems/: index.html
concepts/production-ai/: index.html
concepts/python-internals/: index.html
concepts/system-design/: index.html
docs/: .pages  about.md  index.md  portfolio.md  resume.md
docs/blog/: .pages  2026-01-why-i-built-this.md  index.md
docs/concepts/: .pages  agent-architecture.md  index.md  llm-systems.md  production-ai.md  python-internals.md  system-design.md
docs/notes/: .pages  index.md
docs/references/: .pages  index.md
docs/snippets/: .pages  index.md  python-retry-decorator.md
docs/stylesheets/: custom.css
notes/: index.html
portfolio/: index.html
references/: index.html
references/python/: index.html
resume/: index.html
search/: search_index.json
server/: routes.ts  storage.ts
shared/: schema.ts
snippets/: index.html
snippets/bash-find-files/: index.html
snippets/python-async-requests/: index.html
snippets/python-retry-decorator/: index.html
snippets/sql-recursive-cte/: index.html
(+89 files in other folders)
