[project]
name = "website"
version = "0.1.0"
description = "Personal Website!"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ghp-import>=2.1.0",
    "mkdocs>=1.6.1",
    "mkdocs-bootswatch>=1.1",
    "mkdocs-material>=9.7.1",
    "mkdocs-awesome-pages-plugin>=2.9.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
]
